infra/aws/terraform/ecs.tf
############################# ECS Related ########################
resource "aws_ecs_cluster" "this" {
  name = var.default_name
}

resource "aws_ecr_repository" "this" {
  name = var.default_name
}

resource "aws_ecs_task_definition" "this" {
  family                   = var.default_name
  requires_compatibilities = ["FARGATE"]
  network_mode             = "awsvpc"
  cpu                      = 256
  memory                   = 512
  execution_role_arn       = aws_iam_role.ecs_task_execution.arn
  task_role_arn            = aws_iam_role.ecs_task_role.arn

  container_definitions = format("[%s]", local.api_json_map)
}

resource "aws_ecs_service" "this" {
  name            = var.default_name
  cluster         = aws_ecs_cluster.this.id
  launch_type     = "FARGATE"
  task_definition = aws_ecs_task_definition.this.arn
  desired_count   = 1

  network_configuration {
    security_groups = [aws_security_group.this.id]
    subnets         = [aws_subnet.this["dmz1"].id, aws_subnet.this["dmz2"].id]
  }

  load_balancer {
    target_group_arn = aws_lb_target_group.this.id
    container_name   = var.default_name
    container_port   = 80 # Or 443 if certs are created
  }

  depends_on = [
    aws_lb_listener.this
  ]

  lifecycle {
    ignore_changes = [
      task_definition,
      desired_count
    ]
  }
}

########################################################################

########################################################################
# IAM 
########################################################################
data "aws_iam_policy_document" "ecs_assume_role_policy" {
  statement {
    actions = ["sts:AssumeRole"]

    principals {
      type        = "Service"
      identifiers = ["ecs-tasks.amazonaws.com"]
    }
  }
}

resource "aws_iam_role" "ecs_task_execution" {
  name               = "${var.default_name}-task-exec-role"
  assume_role_policy = data.aws_iam_policy_document.ecs_assume_role_policy.json
}

resource "aws_iam_role_policy_attachment" "ecs_task_execution" {
  role       = aws_iam_role.ecs_task_execution.name
  policy_arn = "arn:aws:iam::aws:policy/service-role/AmazonECSTaskExecutionRolePolicy"
}

resource "aws_iam_role" "ecs_task_role" {
  name               = "${var.default_name}-task-role"
  assume_role_policy = data.aws_iam_policy_document.ecs_assume_role_policy.json
}

data "aws_iam_policy_document" "ecs_task_policy" {

  statement {
    actions = ["secretsmanager:GetSecretValue"]
    resources = [
      aws_secretsmanager_secret.db_password.arn
    ]

  }

}

resource "aws_iam_policy" "ecs_task_policy" {
  name   = "${var.default_name}-ecs-task-policy"
  path   = "/"
  policy = data.aws_iam_policy_document.ecs_task_policy.json
}

resource "aws_iam_role_policy_attachment" "ecs_task_policy" {
  role       = aws_iam_role.ecs_task_role.name
  policy_arn = aws_iam_policy.ecs_task_policy.arn
}
#######################################################################


########################################################################
# Load Balancer
########################################################################
resource "aws_lb" "this" {
  name                             = var.default_name
  load_balancer_type               = "network"
  internal                         = true
  subnets                          = [aws_subnet.this["dmz1"].id, aws_subnet.this["dmz2"].id]
  security_groups                  = [aws_security_group.this.id]
  enable_cross_zone_load_balancing = true
  enable_deletion_protection       = true
}

resource "aws_lb_listener" "this" {
  load_balancer_arn = aws_lb.this.id
  port              = 80
  protocol          = "TCP" #Or TLS in case or SSL
  #  ssl_policy        = var.lb_protocol == "TLS" ? var.ssl_policy_attributes["value"] : ""
  #  certificate_arn   = var.lb_protocol == "TLS" ? var.lb_ssl_cert_arn : ""

  default_action {
    type             = "forward"
    target_group_arn = aws_lb_target_group.this.arn
  }
}

resource "aws_lb_target_group" "this" {
  name        = var.default_name
  port        = 80
  protocol    = "TCP"
  vpc_id      = aws_vpc.main.id
  target_type = "ip"

  health_check {
    path     = null
    protocol = "TCP"
    matcher  = null
  }

  lifecycle {
    create_before_destroy = true
  }
}

########################################################################
# Logs 
########################################################################
resource "aws_cloudwatch_log_group" "this" {
  name              = var.default_name
  retention_in_days = 3

  lifecycle {
    create_before_destroy = true
  }
}

########################################################################
# SGs
########################################################################
resource "aws_security_group" "this" {
  name        = format("%s-ecs-service", var.default_name)
  description = "Allow access to ECS Service"
  vpc_id      = aws_vpc.main.id
}

resource "aws_security_group_rule" "inbound" {
  type = "ingress"

  from_port   = 80
  to_port     = 80
  protocol    = "tcp"
  cidr_blocks = ["1.1.1.1/32"] # Network interface IPs of NLB

  security_group_id = aws_security_group.this.id
}

resource "aws_security_group_rule" "outbound" {
  type = "egress"

  from_port   = 0
  to_port     = 0
  protocol    = -1
  cidr_blocks = ["0.0.0.0/0"]

  security_group_id = aws_security_group.this.id
}

locals {
  container_definitions = {
    name      = "api"
    image     = format("%s.dkr.ecr.%s.amazonaws.com/%s:%s", data.aws_caller_identity.current.account_id, var.region, format("%s-api", var.default_name), "master")
    essential = true
  }

  api_json_map = jsonencode(local.container_definitions)

}

data "aws_caller_identity" "current" {}
